--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
+    @media (max-width: 1200px) {
+      flex-direction: column;
+    }  
   }
 
   &__logo {
